# legato-3rdParty-kconfig-frontends

./: .gitignore  .version  Makefile.am  configure.ac
docs/: known-issues.txt
frontends/: Makefile.am
frontends/conf/: Makefile.am
frontends/gconf/: Makefile.am
frontends/mconf/: Makefile.am
frontends/nconf/: Makefile.am
frontends/qconf/: Makefile.am  qconf.cc  qconf.cc.patch
libs/lxdialog/: Makefile.am
libs/parser/: Makefile.am
utils/: Makefile.am
